<resources>
    <string name="app_name">Take And Go Client</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error_no_internet">No Internet Connection Try Again</string>
    <string name="link_register"><u>להרשמה לחץ כאן</u></string>

    <string name="client_name">שם</string>
    <string name="client_last_name">שם משפחה</string>
    <string name="client_id">תעודת זהות</string>
    <string name="client_phonenumber">מספר פלאפון</string>
    <string name="client_email">אימייל</string>
    <string name="client_creditcard">כרטיס אשראי</string>
    <string name="client_password">סיסמא</string>
    <string name="add_button">הוסף</string>
    <string name="confirm_client_add">לקוח הוסף</string>
    <string name="error_client_add">חלה שגיאה בהוספת לקוח</string>
    <string name="error_id">תעודת זהות לא חוקית</string>
    <string name="error_email_ileagal">אימייל לא חוקי</string>
    <string name="error_phonenumber">מספר פלאפון לא חוקי</string>
    <string name="error_empty_filleds">יש למלא את כל התאים</string>
    <string name="login_remember_me">זכור אותי?</string>
    <string name="error_user_not_found">משתמש לא קיים</string>
    <string name="login_id">תעודת זהות</string>
    <string name="login_password">סיסמא</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
