<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="il.ac.jct.michaelzalman.takeandgoclient.controller.AddClientActivity"
    android:background="@drawable/form_background"
    android:layoutDirection="locale"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/EditTextValues"
            android:id="@+id/FirstName"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_name"
            />


        <EditText
            android:id="@+id/Password"
            style="@style/EditTextValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:hint="@string/client_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/LastName"
            style="@style/EditTextValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/client_last_name"
            android:inputType="textPersonName" />


        <EditText
            style="@style/EditTextValues"
            android:id="@+id/CreditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/client_creditcard" />

        <EditText
            style="@style/EditTextValues"
            android:id="@+id/EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/client_email" />


        <EditText
            style="@style/EditTextValues"
            android:id="@+id/PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/client_phonenumber" />

        <EditText
            style="@style/EditTextValues"
            android:id="@+id/ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="9"
            android:inputType="number"
            android:hint="@string/client_id" />

    <Button
        android:id="@+id/Add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:layout_margin="5dp"
        />

    </LinearLayout>


</ScrollView>
